# csharp-ownership-dllimport

./: App.cs  MemoryNative.cs  README.md  StringIn.cs  StringInMoved.cs  StringInMovedMarshaler.cs  StringInMovedNativeMarshaler.cs  StringInOwnMarshaler.cs  StringOut.cs  StringOutMoved.cs  StringReturn.cs  StringReturnMoved.cs  StringReturnNonMovedMarshaler.cs  StringReturnNonOwnMarshaler.cs  helpers.c  helpers.h  marshalling.csproj  meson.build  mylib.c  string_in.c  string_in_moved.c  string_out.c  string_out_moved.c  string_return.c  string_return_moved.c
